--- a/NueaxProj/package.json
+++ b/NueaxProj/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "ng-connection-service": "^1.0.4",
     "rxjs-compat": "^6.3.3",
+    "saucelabs": "^1.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
